--- a/Tarea 1/Enunciado_Tarea1.Rmd
+++ b/Tarea 1/Enunciado_Tarea1.Rmd
@@ -183,11 +183,11 @@ Pruebe el teorema central del limite aplicando un muestreo de la media en las di
 
 ```{r eval=FALSE}
 # Definición de variables o estructuras necesarias para el muestreo.
-n <- 1000
+n <- c(10, 100, 1000, 5000)
 
-# Realizar el muestreo de las distribuciones.
+# Realizar el muestreo de las distribuciones. //n 10, 100, 1000, 5000
 for(i in 1:n) {
-  
+  rpois(n, lambda = 4)
 }
 
 # Código para gráficos
@@ -204,15 +204,19 @@ Realice el experimento de lanzar una moneda cargada 1000 veces y observe el comp
 
 ```{r eval=TRUE}
 # Simular lanzamientos
-
+evolucion_caras <- NULL
+throws <- NULL
+evolution_porcentage <- NULL
 for (lanzamientos in 1:1000) {
-  #cara = 0
-  #sello = 1
-  throws <- rbinom(n=lanzamientos,size=2,prob=0.2)
+  #cara = 1
+  #sello = 0
+  throws <- rbinom(n=1,size=1,prob=0.8)
+  evolucion_caras <- append(evolucion_caras, throws)
+  evolution_porcentage <- append(evolution_porcentage, sum(evolucion_caras)/length(evolucion_caras))
 
 }
-
 # Gráfico de la convergencia
+plot(evolution_porcentage, type="l", col="blue", xlab="N° de lanzamientos", ylab="Fondos", main="Gráfico de la convergencia de la probabilidad de salir cara")
 ```
 
 #### El problema de Monty Hall 
@@ -235,14 +239,38 @@ Imagine que usted es participante del concurso y desea calcular la probabilidad 
 montyhall <- function(cambiar = TRUE){
   Puertas <- sample(1:3,3)             #Puertas donde la posición que tiene el 3 es el premio
   posicion <- sample(1:3,1)            #Elección del participante.
+  if (cambiar == TRUE){
+    elim<-sample(1:2,2)                                 #
+    elim<-elim[which(elim == Puertas[posicion])]
+    puerta_elim = sample(elim,1)
+    new_door <- Puertas[-which(Puertas == puerta_elim)] #eliminaremos el 2 o el 1 del sample ya que no son el premio (seria mostrar la puerta equivocada)
+         
+  }
+  cat(Puertas,"\n")
+  cat(posicion, "\n")
+  cat(Puertas[posicion], "\n")
+  cat(elim, "\n")
+  cat(puerta_elim, "\n")
+  cat(new_door)
   
-  return(Eleccion) # Retornamos la elección, esta puede que tenga el premio o no
+  #return(Eleccion) # Retornamos la elección, esta puede que tenga el premio o no
 }
 
 # Función que simula N juegos
 n_juegos <- function(n = 10 ,cambiar_puerta = TRUE){
-  
+  evolucion_victoria <- NULL
+  eleccion <- NULL
+  evolution_porcentage <- NULL
+  for (lanzamientos in 1:1000) {
+    #victoria = 1
+    #derrota = 0
+    eleccion<- 
+    evolucion_caras <- append(evolucion_caras, throws)
+    evolution_porcentage <- append(evolution_porcentage, sum(evolucion_caras)/length(evolucion_caras))
+
 }
+}
+montyhall()
 ```
 
 ---
@@ -291,7 +319,6 @@ Para realizar el experimento usted decide asumir las siguientes declaraciones, b
 En el **primer experimento** deberá obtener la evolución de los fondos hasta que el jugador se queda sin fondos para jugar. Puede ser útil seguir la lógica de una moneda cargada para realizar esto. Pruebe esto con una apuesta igual a 5, 25 y 50 graficando los resultados. Comente los resultados obtenidos.
 
 Para la **segunda parte** de este experimento, con las funciones ya creadas, proyecte 5000 apuestas y obtenga la probabilidad a la que converge el experimento empezando con una apuesta de: 5, 25 y 50.
-
 **Respuesta**
 
 ```{r eval=FALSE}
@@ -312,9 +339,45 @@ ruina <- function(fondos = 100, apuesta = 5){
 }
 
 plot(ruina(), type="l", col="blue", xlab="N° de juegos", ylab="Fondos", main="Evolución de los fondos (apuesta = 5)")
+cat("Grafico 1 : Podemos notas que deciende hasta perder todo pero de todas manera se demora en llegar a eso", "\n")
 plot(ruina(apuesta = 25), type="l", col="blue", xlab="N° de juegos", ylab="Fondos", main="Evolución de los fondos (apuesta = 25)")
+cat("Grafico 2 : Sucede lo mismo que con apuestas de 5 pero a una velocidad mas rapida", "\n")
 plot(ruina(apuesta = 50), type="l", col="blue", xlab="N° de juegos", ylab="Fondos", main="Evolución de los fondos (apuesta = 50)")
+cat("Grafico 3 : Aqui se nota aun mas la velocidad y al igual que en todos los casos esto se debe a que la probabilidad de ganar es menos de 0.5")
+
+
+evolucion_rep <- NULL
+evolution_porcentage <- NULL
+for (lanzamientos in 1:500) {
+  x<-ruina()
+  evolucion_rep <- append(evolucion_rep, as.integer(x[length(x)]*0.005)) #Creamos un vector que dice 1 si logro ganar y 0 si se quedo en ruina
+  evolution_porcentage <- append(evolution_porcentage, sum(evolucion_rep)/length(evolucion_rep))
+
+}
+
+evolucion_rep_25 <- NULL
+evolution_porcentage_25 <- NULL
+for (lanzamientos in 1:500) {
+  x<-ruina(apuesta=25)
+  evolucion_rep_25 <- append(evolucion_rep_25, as.integer(x[length(x)]*0.005)) #Creamos un vector que dice 1 si logro ganar y 0 si se quedo en ruina
+  evolution_porcentage_25 <- append(evolution_porcentage_25, sum(evolucion_rep_25)/length(evolucion_rep_25))
+
+}
+
+evolucion_rep_50 <- NULL
+evolution_porcentage_50 <- NULL
+for (lanzamientos in 1:500) {
+  x<-ruina(apuesta=50)
+  evolucion_rep_50 <- append(evolucion_rep_50, as.integer(x[length(x)]*0.005)) #Creamos un vector que dice 1 si logro ganar y 0 si se quedo en ruina
+  evolution_porcentage_50 <- append(evolution_porcentage_50, sum(evolucion_rep_50)/length(evolucion_rep_50))
+
+}
+
+plot(evolution_porcentage, type="l", col="blue", xlab="N° de juegos", ylab="Fondos", main="Evolución de la probabilidad de ganar o quedar en ruina (apuesta = 5)")
+plot(evolution_porcentage_25, type="l", col="blue", xlab="N° de juegos", ylab="Fondos", main="Evolución de la probabilidad de ganar o quedar en ruina (apuesta = 25)")
+plot(evolution_porcentage_50, type="l", col="blue", xlab="N° de juegos", ylab="Fondos", main="Evolución de la probabilidad de ganar o quedar en ruina (apuesta = 50)")
 ```
+
 
 
 
