--- a/Tarea 1/Enunciado_Tarea1.Rmd
+++ b/Tarea 1/Enunciado_Tarea1.Rmd
@@ -240,13 +240,23 @@ montyhall <- function(cambiar = TRUE){
   Puertas <- sample(1:3,3)             #Puertas donde la posición que tiene el 3 es el premio
   posicion <- sample(1:3,1)            #Elección del participante.
   if (cambiar == TRUE){
-    elim<-sample(1:2,2)                                 # tomamos las puertas que si podemos eliminar (1 y 2)
-    elim<-elim[which(elim != Puertas[posicion])]       # si nuestra puerta elegida es dentro de esa la sacamos (si elegi el 1, ya no puedo eliminarla)
-    puerta_elim = sample(elim,1)                        # elegimos al azar una de las posibles opciones
+    if(Puertas[posicion]== 1){
+      puerta_elim <- 2
+    }
+    if(Puertas[posicion]== 2){
+      puerta_elim <- 1
+    }
+    if(Puertas[posicion]== 3){
+      puerta_elim <- sample(1:2,1)
+    }
+    #elim<-sample(1:2,2)                                 # tomamos las puertas que si podemos eliminar (1 y 2)
+    #elim<-elim[which(elim != Puertas[posicion])]       # si nuestra puerta elegida es dentro de esa la sacamos (si elegi el 1, ya no puedo eliminarla)
+    #elim <- elim[-grep(Puertas[posicion],elim)]
+    #puerta_elim = sample(elim,1)                        # elegimos al azar una de las posibles opciones
     new_door <- Puertas[which(Puertas != puerta_elim)] #eliminaremos el 2 o el 1 del sample ya que no son el premio (seria mostrar la puerta equivocada)
     
-    cat(puerta_elim, "\n")
-    cat(new_door, "\n")
+    #cat(puerta_elim, "\n")
+    #cat(new_door, "\n")
     Eleccion <- new_door[which(new_door != Puertas[posicion])] #eliminamos la opcion original quedandonos con la ultima puerta
   }
   else{
@@ -254,20 +264,23 @@ montyhall <- function(cambiar = TRUE){
   }
   #cat(Puertas,"\n")
   #cat(posicion, "\n")
-  cat(Puertas[posicion], "\n")
+  #cat(Puertas[posicion], "\n")
   #cat(elim, "\n")
-  cat(puerta_elim, "\n")
-  cat(new_door, "\n")
-  cat(Eleccion, "\n")
+  #cat(puerta_elim, "\n")
+  #cat(new_door, "\n")
+  #cat(Eleccion, "\n")
   
   return(Eleccion) # Retornamos la elección, esta puede que tenga el premio o no
 }
 
 # Función que simula N juegos
-n_juegos <- function(n = 100 ,cambiar_puerta = TRUE){
+n_juegos <- function(n = 500 ,cambiar_puerta = TRUE){
   evolucion_victoria <- NULL
   eleccion <- NULL
   evolution_porcentage <- NULL
+  evolucion_victoria_sc <- NULL
+  eleccion_sc <- NULL
+  evolution_porcentage_sc <-NULL
   for (lanzamientos in 1:n) {
     #victoria = 1
     #derrota = 0
@@ -279,11 +292,21 @@ n_juegos <- function(n = 100 ,cambiar_puerta = TRUE){
       evolucion_victoria <- append(evolucion_victoria, 0)
     }
     evolution_porcentage <- append(evolution_porcentage, sum(evolucion_victoria)/length(evolucion_victoria))
-    plot(evolution_porcentage, type="l", col="blue", xlab="Porcentaje de victorias al cambiar de puerta", ylab="Fondos", main="Evolución de la probabilidad de ganar al cambiar de puerta")
+    
+    eleccion_sc<- montyhall(FALSE)
+    if (eleccion == 3){
+      evolucion_victoria_sc <- append(evolucion_victoria_sc, 1)
+    }
+    else{
+      evolucion_victoria_sc <- append(evolucion_victoria_sc, 0)
+    }
+    evolution_porcentage_sc <- append(evolution_porcentage_sc, sum(evolucion_victoria_sc)/length(evolucion_victoria_sc))
+    }
+  plot(evolution_porcentage, type="l", col="blue", xlab="Porcentaje de victorias al cambiar de puerta", ylab="Fondos", main="Evolución de la probabilidad de ganar al cambiar de puerta")
+  plot(evolution_porcentage_sc, type="l", col="blue", xlab="Porcentaje de victorias sin cambiar de puerta", ylab="Fondos", main="Evolución de la probabilidad de ganar al cambiar de puerta")
 }
-}
-montyhall()
-#n_juegos()
+#montyhall()
+n_juegos()
 ```
 
 ---
