--- a/Tarea 1/Enunciado_Tarea1.Rmd
+++ b/Tarea 1/Enunciado_Tarea1.Rmd
@@ -324,7 +324,7 @@ Se le aconseja que para simular los lanzamientos de dados utilice la función `s
 
 ```{r eval=FALSE}
 # Primer grupo de eventos
-N_lan = 50000 # Numero de lanzamientos
+N_lan = 1000 # Numero de lanzamientos
 
 
 
@@ -351,17 +351,23 @@ for (lanzamientos in 1:N_lan) {
   } else{
     PB <- append(PB,0)
   }
-  if (D1%in%L_AB | D2%in%L_AB){
+  if (D1%in%L_AB){
+    PAB <- append(PAB,1)
+  } else{
+    PAB<- append(PAB,0)
+  }
+  if(D2%in%L_AB){
     PAB <- append(PAB,1)
   } else{
     PAB <- append(PAB,0)
   }
+  
   multProb <- append(multProb, (sum(PA)/length(PA))*(sum(PB)/length(PB)))
   probAB <- append(probAB, sum(PAB)/length(PAB))
 }
 
-  plot(multProb, type="l", col="blue", xlab="Porcentaje de victorias al cambiar de puerta", ylab="Fondos", main="Evolución de la probabilidad de ganar al cambiar de puerta")
-  plot(probAB, type="l", col="blue", xlab="Porcentaje de victorias al cambiar de puerta", ylab="Fondos", main="Evolución de la probabilidad de ganar al cambiar de puerta")
+  plot(multProb, type="l", col="blue", xlab="Porcentaje de lanzamientos favorables de P(A)P(B)", ylab="Fondos", main="Evolución de la probabilidad de tener lanzamientos favorables")
+  plot(probAB, type="l", col="blue", xlab="Porcentaje de lanzamientos favorables de P(AB)", ylab="Fondos", main="Evolución de la probabilidad de tener lanzamientos favorables")
 
 
 ```
@@ -370,9 +376,44 @@ for (lanzamientos in 1:N_lan) {
 # Segundo grupo de eventos
 N_lan = 1000 # Numero de lanzamientos
   
-L_A =  # Lanzamientos favorables A = c(1, 2, 6)
-L_B =  # Lanzamientos favorables B = c(1, 2, 3)
-L_AB = # Lanzamientos favorables AB = c(1, 2)
+L_A = c(1, 2, 6) # Lanzamientos favorables A = c(1, 2, 6)
+L_B = c(1, 2, 3) # Lanzamientos favorables B = c(1, 2, 3)
+L_AB = c(1, 2)# Lanzamientos favorables AB = c(1, 2)
+
+
+PA <- NULL
+PB <- NULL
+PAB <- NULL
+
+probAB <- NULL
+multProb <- NULL
+for (lanzamientos in 1:N_lan) {
+  D1 = sample(1:6,1)
+  
+  if (D1%in%L_A){
+      PA <- append(PA,1)
+  } else{
+      PA <- append(PA,0)
+  }
+  if (D1%in%L_B){
+      PB <- append(PB,1)
+  } else{
+    PB <- append(PB,0)
+  }
+  if (D1%in%L_AB){
+    PAB <- append(PAB,1)
+  } else{
+    PAB<- append(PAB,0)
+  }
+  
+  
+  multProb <- append(multProb, (sum(PA)/length(PA))*(sum(PB)/length(PB)))
+  probAB <- append(probAB, sum(PAB)/length(PAB))
+}
+
+  plot(multProb, type="l", col="blue", xlab="Porcentaje de victorias al cambiar de puerta", ylab="Fondos", main="Evolución de la probabilidad de ganar al cambiar de puerta")
+  plot(probAB, type="l", col="blue", xlab="Porcentaje de victorias al cambiar de puerta", ylab="Fondos", main="Evolución de la probabilidad de ganar al cambiar de puerta")
+
 ```
 
 ---
