--- a/Tarea 1/Enunciado_Tarea1.Rmd
+++ b/Tarea 1/Enunciado_Tarea1.Rmd
@@ -186,32 +186,35 @@ Pruebe el teorema central del limite aplicando un muestreo de la media en las di
 ```{r eval=FALSE}
 # Definición de variables o estructuras necesarias para el muestreo.
 n <- c(10, 100, 1000, 5000)
-vect_pois <- vector()
-vect_exp <- vector()
-vect_bern <- vector()
+vect_pois_10 <- vector()
+vect_pois_100 <- vector()
+vect_pois_1000 <- vector()
+vect_pois_5000 <- vector()
 # Realizar el muestreo de las distribuciones. //n 10, 100, 1000, 5000
-for(i in 1:10000) {
-  x<- rpois(1000, 5)
-  expo <- rexp(1000, 5)
-  bern <- rexp(1000, 5)
-  
+for(i in 1:10) {
+  x<-rpois(1000, 5)
   prom <- mean(x)
-  prom_exp <- mean(expo)
-  prom_bern <- mean(bern)
-  
-  vect_pois <- append(vect_pois, prom)
-  vect_exp <- append(vect_exp, prom_exp)
-  vect_bern <- append(vect_bern, prom_bern)
+  vect_pois_10 <- append(vect_pois_10, prom)
 }
-
-hist(vect_pois)
-lines(density(vect_pois))
-
-hist(vect_exp)
-lines(density(vect_exp))
-
-hist(vect_bern)
-lines(density(vect_bern))
+for(i in 1:100) {
+  x<-rpois(1000, 5)
+  prom <- mean(x)
+  vect_pois_100 <- append(vect_pois_100, prom)
+}
+for(i in 1:1000) {
+  x<-rpois(1000, 5)
+  prom <- mean(x)
+  vect_pois_1000 <- append(vect_pois_1000, prom)
+}
+for(i in 1:5000) {
+  x<-rpois(1000, 5)
+  prom <- mean(x)
+  vect_pois_5000 <- append(vect_pois_5000, prom)
+}
+hist(vect_pois_10)
+hist(vect_pois_100)
+hist(vect_pois_1000)
+hist(vect_pois_5000)
 # Código para gráficos
 ```
 
